--- a/src/index.css
+++ b/src/index.css
@@ -124,10 +124,6 @@ textarea:focus {
   color: white;
 }
 
-.green-btn:hover {
-  background-color: #679e00;
-}
-
 table {
   border-collapse: collapse;
   font-size: 0.9rem;
@@ -163,21 +159,15 @@ td {
 }
 
 .table-row-hover:hover {
-  background-color: #eee;
+  background-color: #e9e9e9;
   cursor: pointer;
 }
 
 .selected-table-row {
-  background-color: #e4ffcf;
+  background-color: #f0ffc5;
 }
 
 .edit-pen {
-  padding: 5px;
-  border-radius: 2.5px;
   cursor: pointer;
-}
-
-.edit-pen:hover {
-  background-color: #bbb;
 }
 
